--- a/app/src/main/res/navigation/clarigo_navigation.xml
+++ b/app/src/main/res/navigation/clarigo_navigation.xml
@@ -7,12 +7,32 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.flowz.clarigojobtaskapp.ListFragment"
-        android:label="List"
-        tools:layout="@layout/fragment_list" />
+        android:name="com.flowz.clarigojobtaskapp.ui.ListFragment"
+        android:label="Clarigo Employee List"
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_listFragment_to_addFragment"
+            app:destination="@id/addFragment" />
+<!--        <argument-->
+<!--            android:name="ClarigoEmployee"-->
+<!--            app:argType="com.flowz.clarigojobtaskapp.model.Employee.ClarigoEmployee"-->
+<!--            app:nullable="true"-->
+<!--            android:defaultValue="@null" />-->
+    </fragment>
     <fragment
         android:id="@+id/addFragment"
-        android:name="com.flowz.clarigojobtaskapp.AddFragment"
+        android:name="com.flowz.clarigojobtaskapp.ui.AddFragment"
         android:label="Add"
         tools:layout="@layout/fragment_add" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.flowz.clarigojobtaskapp.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+
+    <!--    <argument-->
+<!--        android:name="ClarigoEmployee"-->
+<!--        app:argType="com.flowz.clarigojobtaskapp.model.Employee.ClarigoEmployee"-->
+<!--        app:nullable="true"-->
+<!--        android:defaultValue="@null" />-->
 </navigation>
