--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,26 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="UserNameStyle" parent="TextAppearance.MaterialComponents.Headline6">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle"> bold</item>
+    <item name="android:textColor"> @color/black</item>
+        <item name="android:fontFamily"> @font/almendra </item>
+    </style>
+
+    <style name="OtherStyle" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily"> @font/almendra </item>
+    </style>
+
+    <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/black</item>
+    </style>
+
+
 </resources>
