--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/name_layout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/user_entered_reset_email"
+            android:id="@+id/ce_new_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_baseline_email_24"
